[project]
name = "PysicsWorld"
version = "0.1.11"
authors = [
  { name="Joshua Micheletti", email="joshua.e.n.micheletti@gmail.com" },
]
description = "2D physics engine with rect vs rect AABB collision detection and resolution"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Joshua-Micheletti/PysicsWorld"
"Bug Tracker" = "https://github.com/Joshua-Micheletti/PysicsWorld/issues"
